--- a/CSS/style.css
+++ b/CSS/style.css
@@ -122,7 +122,7 @@ img {
 .columnsix {
 	background-color: #39252E;
 	flex-basis: 50%;
-	padding: 10px;
+	padding: 15px;
 }
 #pagefooter {
 	background-color: #301f26;
@@ -136,3 +136,33 @@ a {
 a:hover {
 	color:  lightslategray;
 }
+.arrow-left {
+    font-size: 40px;
+    position: absolute;
+	text-align: center;
+    top: 45%;
+    left: 10%;
+	height: 55px;
+	width: 50px;
+    border: 1px solid #ffff;
+    background-color: #7C4161;
+    color: #39252E;
+    padding: 5px;
+    border-radius: 50%;
+    cursor: pointer;
+  }
+  .arrow-right {
+    font-size: 40px;
+    position: absolute;
+	text-align: center;
+    top: 45%;
+    right: 10%;
+	height: 55px;
+	width: 50px;
+    border: 1px solid #ffff;
+    background-color: #7C4161;
+    color: #39252E;
+    padding: 5px;
+    border-radius: 50%;
+    cursor: pointer;
+  }
