--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,5 +1,5 @@
 body {
-	background-color: #F7FCFD;
+	background-color: #ffff; /*#39252E;*/
 	font-family: "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", "DejaVu Sans", Verdana, "sans-serif";
 	line-height: 1.5;
 	color: black;
@@ -51,13 +51,15 @@ li.nav a:hover:not(.active) {
 }
 #rowone {
 	display: flex;
-	min-height: 450px;
+	min-height: 280px;
 }
 main {
 	background-color: #39252E;
 	color: white;
+	height: 30%;
 	flex-basis: 100%;
 	text-align: center;
+	margin-top: 15px;
 }
 .rowtwo {
 	display: flex;
@@ -154,7 +156,7 @@ a:hover {
     padding: 5px;
     border-radius: 50%;
     cursor: pointer;
-  }
+}
   .arrow-right {
     font-size: 40px;
     position: absolute;
@@ -169,4 +171,35 @@ a:hover {
     padding: 5px;
     border-radius: 50%;
     cursor: pointer;
-  }
+}
+.text-above {
+	color: #ffff;
+	text-align: center;
+	background-color: #39252E;
+	margin: 0;
+	padding: 0;
+}
+p {
+	padding-right: 20px;
+	padding-left: 20px;
+}
+h2 { 
+	padding: 0;
+	margin-top: 15px;
+	margin-bottom: 0;
+}
+h2#bio { 
+	padding: 0;
+	margin-top: 15px;
+	margin-bottom: 0;
+	font-size: 40px;
+    font-weight: bold;
+}
+h3 {
+	color: #C0C0C0;
+	padding: 5px;
+	margin: 0;
+}
+h2#music {
+	padding-top: 50px;
+}
