--- a/CSS/style.css
+++ b/CSS/style.css
@@ -68,7 +68,7 @@ main {
 section {
 	padding: 45px;
 }
-.video {
+.embed {
 	width: 765px;
 	height: 420px;
 	vertical-align: middle;
@@ -156,7 +156,7 @@ a:hover {
     border-radius: 50%;
     cursor: pointer;
 }
-  .arrow-right {
+.arrow-right {
     font-size: 40px;
     position: absolute;
 	text-align: center;
@@ -206,4 +206,68 @@ h2#music {
 	height: 30px;
 	width: 530;
 	padding: 15px;
+}
+.rowcreators {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	position: relative;
+}
+.columnseven {
+	padding: 0px;
+	margin-top: 15px;
+	margin-right: 45px;
+	margin-left: 45px;
+	color: #ffff;
+	width: 30%;
+	text-align: center;
+}
+.rowcast {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	position: relative;
+	margin-right: 30px;
+	margin-left: 30px;
+}
+.image-hover-text
+{
+	position: relative;
+	display: inline-block;
+	width: auto;
+	height: auto;
+	transition: all 0.2s linear;
+	margin: 15px;
+}
+.hover-text
+{
+	position: absolute;
+	top: 0;
+	width: 100%;  
+	height: 100%;
+	opacity: 0;
+	transition: 0.2s linear;
+}
+.hover-text:hover 
+{
+	opacity: 75%;
+}
+.hover-text-bubble
+{
+	position: relative;
+	box-sizing: border-box;
+	top: 0; left: 0; right: 100%;
+	height: 100%;
+	text-align: center;
+	background: #ffff;
+	padding: 30% 0px;
+	overflow: hidden;
+	font-size: 15px;
+	text-align: center;
+	word-wrap: break-word;
+}
+.hover-text .hover-text-title
+{
+	font-size: 25px;
+	display: block;
 }
