--- a/CSS/style.css
+++ b/CSS/style.css
@@ -238,6 +238,7 @@ h2#music {
 	height: auto;
 	transition: all 0.2s linear;
 	margin: 15px;
+	color: #ffff;
 }
 .hover-text
 {
@@ -250,7 +251,7 @@ h2#music {
 }
 .hover-text:hover 
 {
-	opacity: 75%;
+	opacity: 90%;
 }
 .hover-text-bubble
 {
@@ -259,7 +260,7 @@ h2#music {
 	top: 0; left: 0; right: 100%;
 	height: 100%;
 	text-align: center;
-	background: #ffff;
+	background: #30588C;
 	padding: 30% 0px;
 	overflow: hidden;
 	font-size: 15px;
